[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/extra/GameOver.png" type="Texture" id=1]
[ext_resource path="res://assets/themes/MainTheme.tres" type="Theme" id=2]
[ext_resource path="res://assets/fonts/The Macabre.otf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/GameOver.gd" type="Script" id=4]
[ext_resource path="res://assets/sounds/Button.ogg" type="AudioStream" id=5]
[ext_resource path="res://assets/soundtrack/Ansyou.ogg" type="AudioStream" id=6]
[ext_resource path="res://Scenes/Transition_Scene.tscn" type="PackedScene" id=7]

[sub_resource type="DynamicFont" id=1]
size = 50
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[node name="GameOver" type="CanvasLayer"]
pause_mode = 2
layer = 10
script = ExtResource( 4 )

[node name="ColorRect" type="ColorRect" parent="."]
visible = false
margin_right = 1923.0
margin_bottom = 1083.0
color = Color( 0.0588235, 0.0509804, 0.0509804, 0.87451 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameOver" type="Sprite" parent="."]
visible = false
position = Vector2( 968.036, 280.447 )
scale = Vector2( 2.61961, 2.61961 )
texture = ExtResource( 1 )

[node name="Reload" type="Button" parent="."]
visible = false
margin_left = 737.726
margin_top = 427.817
margin_right = 1182.73
margin_bottom = 570.817
rect_pivot_offset = Vector2( 366.066, 71.5 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Reload Save"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="Button" parent="."]
visible = false
margin_left = 737.726
margin_top = 634.292
margin_right = 1182.73
margin_bottom = 777.292
rect_pivot_offset = Vector2( 366.066, 71.5 )
theme = ExtResource( 2 )
custom_fonts/font = SubResource( 1 )
text = "Back to menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonClick" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="Transition_Scene" parent="." instance=ExtResource( 7 )]
[connection signal="pressed" from="Reload" to="." method="_on_Reload_pressed"]
[connection signal="pressed" from="Menu" to="." method="_on_Menu_pressed"]
[connection signal="transitioned" from="Transition_Scene" to="." method="_on_Transition_Scene_transitioned"]
